# NeriPlayer-Desktop

./: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
src/: App.vue  main.ts  shaders.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/api/: lrclib.rs  mod.rs
src-tauri/src/api/bilibili/: client.rs  mod.rs  wbi.rs
src-tauri/src/api/netease/: client.rs  crypto.rs
src-tauri/src/api/youtube/: client.rs
src-tauri/src/audio/: analyzer.rs  effects.rs  mod.rs  player.rs  queue.rs
src-tauri/src/auth/: cookies.rs  mod.rs  state.rs  youtube_hash.rs
src-tauri/src/commands/: auth_cmd.rs  download_cmd.rs  library_cmd.rs  lyrics_cmd.rs  mod.rs  player_cmd.rs  recommend_cmd.rs  search_cmd.rs  settings_cmd.rs  sync_cmd.rs
src-tauri/src/lyrics/: manager.rs  mod.rs  parser.rs
src-tauri/src/settings/: store.rs
src-tauri/src/sync/: github_api.rs  manager.rs  merge.rs  mod.rs  models.rs  proto_models.rs  serializer.rs  webdav_api.rs
src/components/: AddToPlaylistDialog.vue  AppToast.vue  CoverBlurBackground.vue  HyperBackground.vue  LyricsView.vue  MiniPlayer.vue  NowPlaying.vue  QueuePanel.vue  SideNav.vue  TitleBar.vue  WaveformSlider.vue
src/i18n/: en.json  index.ts  ja.json  zh-CN.json  zh-TW.json
src/shaders/: hyperBackground.frag  hyperBackground.ts
src/stores/: auth.ts  download.ts  history.ts  library.ts  player.ts  recommend.ts  search.ts  sync.ts  (+2 more)
(+18 files in other folders)
